--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/evanonb/node_fall22#readme",
   "dependencies": {
+    "axios": "^1.1.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongoose": "^6.6.5"
