--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "bugs": {
     "url": "https://github.com/evanonb/node_fall22/issues"
   },
-  "homepage": "https://github.com/evanonb/node_fall22/issues#readme",
+  "homepage": "https://github.com/evanonb/node_fall22#readme",
   "dependencies": {
     "axios": "^1.1.2",
+    "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongoose": "^6.6.5"
